[workspace]
members = ["controller", "turret"]
resolver = "2"

[workspace.package]
authors = ["George Dănuț Aldea <danutz.aldea23@gmail.ro"]
version = "0.1.0"
rust-version = "1.77"
edition = "2021"

[profile.dev]
debug = 2
codegen-units = 1

[profile.release]
debug = 2
lto = true
opt-level = "z"
codegen-units = 1
