[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
embassy-embedded-hal = {version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"]}
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-40960", "defmt"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["time-driver", "critical-section-impl", "defmt"] }
embassy-net = { version = "0.4.0",git = "https://github.com/embassy-rs/embassy.git", features = ["proto-ipv4", "tcp", "dhcpv4", "medium-ethernet", "defmt"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-time ={ version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"]}
static_cell = { version = "2", features = ["nightly"]}
cyw43-pio = {git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "overclock"]}
cyw43 = {git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
embassy-usb = {version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"]}
embassy-futures = {version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git"}
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git"}
eeprom24x = "0.7.0"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0-rc.2"
embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async"] }
lcd1602-driver = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
